Arrows spacing fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -694,3 +694,9 @@
 .custom-slider-navigation {
 	z-index: 6 !important;
 }
+
+@media only screen and (max-width: 600px) {
+	.tt-portfolio-slider-navigation {
+		max-width: 45%;
+	}
+}
